# rubiks-cube-gl

./: .gitattributes  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
kernels/opencl/: mat_mul.cl  moller_trumbore.cl  vec_add.cl
lib/stb_image/: CMakeLists.txt
shaders/: basic.frag  basic.vert
src/: CMakeLists.txt  camera.c  camera.h  cube.c  cube.h  geometry.c  geometry.h  kernels.c  kernels.h  main.c  matrix.c  matrix.h  mouse_handler.c  mouse_handler.h  quaternion.c  quaternion.h  ray.h  read_file.c  read_file.h  renderer.c  renderer.h  shader.c  shader.h  vector.c  vector.h  window.c  window.h
src/cl_kernels/: CMakeLists.txt  cl_kernels_init.c
src/cl_kernels/include/: cl_kernels.h  cl_kernels_init.h
src/cl_kernels/kernels/: cl_kernels_context.h
src/cl_kernels/kernels/kernel_vector_add/: kernel_vector_add.c  vector_add.cl
src/read_file/: CMakeLists.txt  read_file.h
